# exemel

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  lib.typ  typst.toml
src/: lib.rs
