[package]
name = "xml-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor4ii = { version = "1.2.2", features = ["serde1"] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
wasm-minimal-protocol = "0.1"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
